--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "app.js",
     "scripts": {
-        "start": "nodemon.js"
+        "start": "nodemon app.js"
     },
     "author": "",
     "license": "ISC",
