evangadi-forum backend commit

--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
-    "name": "evangadi-forum",
+    "name": "evangadi-forum-backend",
     "version": "1.0.0",
     "description": "",
     "main": "app.js",
-    "scripts": {
-        "start": "node app.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
+    "scripts": {},
     "author": "",
     "license": "ISC",
     "dependencies": {
