--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "version": "1.0.0",
     "description": "",
     "main": "app.js",
-    "scripts": {},
+    "scripts": {
+        "start": "node app.js"
+    },
     "author": "",
     "license": "ISC",
     "dependencies": {
